sewup-derive/tests/compile-fail/ewasm_output_from.stderr
error[E0277]: the trait bound `SimpleStruct: SerializeTrait` is not satisfied
   --> $DIR/ewasm_output_from.rs:11:5
    |
11  |     ewasm_output_from!(simple_struct);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SerializeTrait` is not implemented for `SimpleStruct`
    |
   ::: /home/runner/.cargo/registry/src/github.com-1ecc6299db9ec823/bincode-1.3.3/src/lib.rs:108:8
    |
108 |     T: serde::Serialize,
    |        ---------------- required by this bound in `sewup::bincode::serialize`
    |
    = note: this error originates in the macro `ewasm_output_from` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SimpleStruct: SerializeTrait` is not satisfied
   --> $DIR/ewasm_output_from.rs:12:5
    |
12  |     ewasm_output_from!(&simple_struct);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SerializeTrait` is not implemented for `SimpleStruct`
    |
   ::: /home/runner/.cargo/registry/src/github.com-1ecc6299db9ec823/bincode-1.3.3/src/lib.rs:108:8
    |
108 |     T: serde::Serialize,
    |        ---------------- required by this bound in `sewup::bincode::serialize`
    |
    = note: required because of the requirements on the impl of `SerializeTrait` for `&SimpleStruct`
    = note: this error originates in the macro `ewasm_output_from` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `[closure@$DIR/tests/compile-fail/ewasm_output_from.rs:13:5: 13:35]: SerializeTrait` is not satisfied
   --> $DIR/ewasm_output_from.rs:13:5
    |
13  |     ewasm_output_from!(|_| "Str");
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |     |
    |     the trait `SerializeTrait` is not implemented for `[closure@$DIR/tests/compile-fail/ewasm_output_from.rs:13:5: 13:35]`
    |     consider calling this closure
    |
   ::: /home/runner/.cargo/registry/src/github.com-1ecc6299db9ec823/bincode-1.3.3/src/lib.rs:108:8
    |
108 |     T: serde::Serialize,
    |        ---------------- required by this bound in `sewup::bincode::serialize`
    |
    = note: this error originates in the macro `ewasm_output_from` (in Nightly builds, run with -Z macro-backtrace for more info)
